--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,25 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="fill_vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Main" >
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="60dp"
-        android:layout_height="72dp"
-        android:src="@drawable/ic_launcher" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:layout_weight="0.84"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="40dp" />
+    <requestFocus />
+    <requestFocus />
 
 </LinearLayout>
