--- a/res/anim/gros_to_petit.xml
+++ b/res/anim/gros_to_petit.xml
@@ -8,4 +8,10 @@
     android:pivotX="50%"
     android:pivotY="50%"
     android:duration="600"/>
+  
+    <alpha
+    android:fromAlpha="0.0"
+    android:toAlpha="1.0"
+    android:duration="600"/>
+    
 </set>
